--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "http-status-codes": "^2.1.4",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
