--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "@hapi/boom": "^9.1.4",
     "@hapi/joi": "^17.1.1",
     "@sentry/node": "^6.13.2",
+    "axios": "^0.27.2",
     "body-parser": "^1.19.0",
     "bookshelf": "^1.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
@@ -57,6 +59,7 @@
     "lodash": "^4.17.21",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "node-geocoder": "^4.0.0",
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-dist": "^4.1.3",
