consumer service added

--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.11",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node-geocoder": "^4.0.0",
