--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "node-geocoder": "^4.0.0",
     "serve-favicon": "^2.5.0",
     "swagger-jsdoc": "^6.1.0",
     "swagger-ui-dist": "^4.1.3",
+    "uniqid": "^5.4.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
