--- a/.github/workflows/master_api-getonsite.yml
+++ b/.github/workflows/master_api-getonsite.yml
@@ -7,6 +7,7 @@ on:
   push:
     branches:
       - master
+      - develop
   workflow_dispatch:
 
 jobs:
@@ -21,11 +22,11 @@ jobs:
         with:
           node-version: '16.x'
 
-      - name: npm install, build, and test
+      - name: Yarn install, build, and test
         run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+          yarn install
+          yarn build 
+          yarn start 
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
