Add machine Images

--- a/.gitignore
+++ b/.gitignore
@@ -21,8 +21,8 @@ node_modules
 # Build directory
 dist
 
-# Public directory
-public
+# # Public directory
+# public
 
 # Dotenv configuration
 .env
